# wallchanger

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  pch.h  vcpkg.json
CMake/: CompilerWarnings.cmake  RCa10932  StanderdProjectSettings.cmake  TargetArch.cmake  VersionInfo.in  build_lua.cmake  build_tomcrypt.cmake  static_analyze.cmake  tomcryptConfig.cmake.in  windeployqt.cmake
benchmarking/: CMakeLists.txt  bench_cache.cpp  bench_cache_google.cpp
scripts/: generate_mingw-w64.bat  generate_msvc.bat
src/: CMakeLists.txt  change_client.h  change_server.h  change_service.h  config.h  config.hpp  json_helper.h  log.h  main.cpp  message_type.h  scoped_timer.h  scoped_timer.hpp  service_main.cpp  wall_app.cpp  wall_app.h  wall_background.cpp  wall_background.h  wall_cache.h  wall_cache_library.cpp  wall_cache_library.h  wall_manager.cpp  wall_manager.h
src/change_app/: CMakeLists.txt  change_client.h  change_client.hpp  main.cpp  wall_app.cpp  wall_app.h  wall_app.hpp
src/change_lib/: CMakeLists.txt  json_helper.h  json_helper.hpp  message_type.h  message_type.hpp  path_table.cpp  path_table.h  wall_background.cpp  wall_cache.h  wall_cache_library.cpp  wall_cache_library.h  wall_cache_library.hpp  wall_error.cpp  wall_error.hpp
src/change_lib/net/: client_interface.h  client_interface.hpp  connection.h  connection.hpp  net_common.h  net_message.h  net_message.hpp  server_interface.h  server_interface.hpp
src/change_lib/platform/: platform_linux.cpp  platform_linux.h  platform_linux.hpp  platform_win32.cpp  platform_win32.h  platform_win32.hpp  win32_service.cpp  win32_service.h  windows_helper.cpp
src/change_service/: CMakeLists.txt  change_server.h  change_server.hpp  change_service.h  change_service.hpp  change_state.cpp  change_state.hpp  service_main.cpp
src/gui/: CMakeLists.txt  Main.qml  gui_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thumblist_data.cpp  thumblist_data.h  thumblist_model.cpp  thumblist_model.h  wall_app_gui.cpp  wall_app_gui.h  wall_app_qml.cpp  wall_app_qml.h
src/net/: client_interface.h  connect_queue.h  connection.h  net_common.h  net_message.h  server_interface.h
src/platform/: platform_linux.cpp  platform_linux.h  platform_win32.cpp  platform_win32.h  win32_service.cpp  win32_service.h  windows_helper.h
testing/: CMakeLists.txt  test_cache_library.cpp  testing_cache.cpp
tests/: CMakeLists.txt  test_cache_library.cpp  testing_cache.cpp
